<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginView">

    <ImageView
        android:id="@+id/activity_usuario_login_imageView_logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_tmdb" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_usuario_login_imageView_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserMail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/et_user_mail"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserPass"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/et_user_pass"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btIniciarSesion"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/bt_iniciar_sesion"
            android:textAllCaps="false"
            android:elevation="8dp"
            android:textColor="@color/text_light"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/password_olvidada"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/crear_cuenta"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</RelativeLayout>